--- a/admin/adminBilan.html
+++ b/admin/adminBilan.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coordonnées - Admin</title>
-    <title>Dashboard Admin</title>
+    <title>Dashboard Admin - Bilan</title>
     <link rel="shortcut icon" href="/assets/img/log.jpeg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -12,14 +11,14 @@
 <body class="bg-gray-50 font-sans">
     <div class="flex h-screen">
         <aside id="menu" class="bg-white shadow-lg w-64 fixed h-full z-30 transform -translate-x-full lg:translate-x-0 transition-transform duration-300">
-            <div class="p-6 bg-bleu flex justify-between items-center">
+            <div class="p-6 bg-blue-600 flex justify-between items-center">
                 <h2 class="text-white text-xl font-bold">Admin Panel</h2>
                 <button id="btnFermer" class="lg:hidden text-white hover:text-gray-200">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
             
-            <nav class="mt-8">
+            <nav class="mt-4">
                 <a href="dashboardAdmin.html" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 transition-colors">
                     <i class="fas fa-tachometer-alt mr-3"></i>
                     Dashboard
@@ -32,7 +31,7 @@
                     <i class="fas fa-futbol mr-3"></i>
                     Mes Pronostiques
                 </a>
-                <a href="#" class="flex items-center px-6 py-3 text-bleu bg-blue-50 border-r-3 border-bleu">
+                <a href="adminCoordonnee.html" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 transition-colors">
                     <i class="fas fa-bell mr-3"></i>
                     Coordonnées
                 </a>
@@ -60,7 +59,11 @@
                     <i class="fas fa-crown mr-3"></i>
                     Utilisateurs VIP
                 </a>
-                <button id="btnDeco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
+                <a href="#" class="flex items-center px-6 py-3 text-blue-600 bg-blue-50 border-r-3 border-blue-600">
+                    <i class="fas fa-chart-line mr-3"></i>
+                    Bilan
+                </a>
+                <button id="btnDeco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-4">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Déconnexion
                 </button>
@@ -74,12 +77,12 @@
                         <button id="btnOuvrir" class="lg:hidden text-gray-600 mr-4">
                             <i class="fas fa-bars text-xl"></i>
                         </button>
-                        <h1 class="text-xl lg:text-2xl font-semibold text-gray-800">Coordonnées</h1>
+                        <h1 class="text-xl lg:text-2xl font-semibold text-gray-800">Dashboard - Bilan</h1>
                     </div>
                     <div class="flex items-center space-x-4">
                         <div class="relative">
                             <i class="fas fa-bell text-gray-600 text-lg lg:text-xl"></i>
-                            <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">5</span>
+                            <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">3</span>
                         </div>
                         <img src="https://img.freepik.com/vecteurs-premium/icone-profil-avatar-par-defaut-image-utilisateur-medias-sociaux-icone-avatar-gris-silhouette-profil-vide-illustration-vectorielle_561158-3383.jpg?uid=R99967860&semt=ais_hybrid&w=740" alt="Avatar" class="w-8 h-8 rounded-full">
                     </div>
@@ -87,70 +90,47 @@
             </header>
 
             <main class="p-4 lg:p-6">
-                <div class="bg-white rounded-lg shadow-md">
-                    <div class="px-4 lg:px-6 py-4 border-b">
-                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Demandes de Coordonnées</h2>
+                <!-- Section Filtres -->
+                <div class="bg-white rounded-lg shadow-md p-6 mb-6">
+                    <div class="flex flex-col lg:flex-row items-start lg:items-center justify-between mb-6">
+                        <h2 class="text-xl font-semibold text-gray-800 mb-4 lg:mb-0">
+                            <i class="fas fa-chart-bar mr-2 text-blue-600"></i>
+                            Bilan des Activités
+                        </h2>
+                        
+                        <div class="flex flex-wrap gap-2">
+                            <button class="filtre-btn active bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-medium transition-all hover:bg-blue-700" data-periode="aujourd'hui">
+                                Aujourd'hui
+                            </button>
+                            <button class="filtre-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg text-sm font-medium transition-all hover:bg-gray-300" data-periode="hier">
+                                Hier
+                            </button>
+                            <button class="filtre-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg text-sm font-medium transition-all hover:bg-gray-300" data-periode="mois-actuel">
+                                Mois Actuel
+                            </button>
+                            <button class="filtre-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg text-sm font-medium transition-all hover:bg-gray-300" data-periode="mois-dernier">
+                                Mois Dernier
+                            </button>
+                            <button class="filtre-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg text-sm font-medium transition-all hover:bg-gray-300" data-periode="tous">
+                                Tous
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="hidden md:block overflow-x-auto">
-                        <table class="w-full">
-                            <thead class="bg-gray-50">
-                                <tr>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Utilisateur</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Montant</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Numero</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Plateforme</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Date</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="tabDem" class="divide-y divide-gray-200">
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="md:hidden" id="demMob">
+                    <div class="text-sm text-gray-600 mb-4">
+                        <i class="fas fa-calendar-alt mr-2"></i>
+                        Période sélectionnée: <span id="periode-active" class="font-semibold">Aujourd'hui</span>
+                        <span class="ml-4">
+                            <i class="fas fa-clock mr-1"></i>
+                            Dernière mise à jour: <span id="derniere-maj">Il y a quelques instants</span>
+                        </span>
                     </div>
                 </div>
+
             </main>
         </div>
     </div>
 
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden lg:hidden"></div>
 
-    <div id="modalRep" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg p-4 sm:p-6 w-full max-w-md max-h-screen overflow-y-auto">
-            <div class="flex justify-between items-center mb-4">
-                <h3 class="text-lg font-semibold text-gray-800">Répondre à la demande</h3>
-                <button id="btnFermerModal" class="text-gray-400 hover:text-gray-600">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-            <div class="space-y-4">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Montant disponible</label>
-                    <input type="number" id="mt" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-bleu" placeholder="50000">
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Ville</label>
-                    <input type="text" id="vil" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-bleu" placeholder="Abidjan">
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Rue</label>
-                    <input type="text" id="ru" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-bleu" placeholder="Rue de la République">
-                </div>
-                <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-3 pt-4">
-                    <button id="btnSoum" class="flex-1 bg-bleu text-white py-2 px-4 rounded-md hover:bg-bleu-fonce transition-colors">
-                        <i class="fas fa-paper-plane mr-2"></i>Envoyer
-                    </button>
-                    <button id="btnAnn" class="flex-1 bg-gray-500 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition-colors">
-                        Annuler
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="/script/adminCoordonnee.js"></script>
-</body>
-</html>
+    <script>
