--- a/admin/adminBonus.html
+++ b/admin/adminBonus.html
@@ -51,11 +51,15 @@
                     <i class="fas fa-credit-card mr-3"></i>
                     Transactions
                 </a>
-                <a href="adminBonus.html" class="flex items-center px-6 py-3 text-bleu-principal bg-blue-50 border-r-3 border-bleu-principal">
+                <a href="#" class="flex items-center px-6 py-3 text-bleu-principal bg-blue-50 border-r-3 border-bleu-principal">
                     <i class="fas fa-gift mr-3"></i>
                     Bonus
                 </a>
-                <button id="deco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
+                <a href="adminVip.html" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 transition-colors">
+                    <i class="fas fa-crown mr-3"></i>
+                    Utilisateurs VIP
+                </a>
+                <button id="btnDeco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Déconnexion
                 </button>
@@ -83,67 +87,26 @@
 
             <main class="p-4 lg:p-6">
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-6 mb-6 lg:mb-8">
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between mb-4">
-                            <div>
-                                <p class="text-gray-500 text-sm">Quiz Actifs</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-bleu-principal" id="nbQuiz">5</p>
-                            </div>
-                            <div class="bg-blue-100 p-3 rounded-full">
-                                <i class="fas fa-question-circle text-bleu-principal text-lg lg:text-xl"></i>
-                            </div>
-                        </div>
-                        <p class="text-sm text-gray-600 mb-2">Bonus: 500 XOF/jour</p>
-                    </div>
-
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between mb-4">
-                            <div>
-                                <p class="text-gray-500 text-sm">Membres VIP</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-jaune-accent" id="nbVip">23</p>
-                            </div>
-                            <div class="bg-yellow-100 p-3 rounded-full">
-                                <i class="fas fa-crown text-jaune-accent text-lg lg:text-xl"></i>
-                            </div>
-                        </div>
-                        <p class="text-sm text-gray-600 mb-2">Bonus: 1000 XOF/mois</p>
-                    </div>
-
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between mb-4">
-                            <div>
-                                <p class="text-gray-500 text-sm">Total Bonus Distribués</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-green-600" id="totalBonus">125,500</p>
-                            </div>
-                            <div class="bg-green-100 p-3 rounded-full">
-                                <i class="fas fa-coins text-green-600 text-lg lg:text-xl"></i>
-                            </div>
-                        </div>
-                        <p class="text-sm text-gray-600 mb-2">XOF ce mois</p>
-                    </div>
-                </div>
-
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6 mb-6 lg:mb-8">
                     <div class="bg-white rounded-lg shadow-md">
                         <div class="px-4 lg:px-6 py-4 border-b">
-                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Créer un Quiz Quotidien</h2>
+                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Quiz Standard</h2>
                         </div>
                         <div class="p-4 lg:p-6">
-                            <form id="formQuiz">
-                                <div class="mb-4">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2">Titre du Quiz</label>
-                                    <input type="text" id="titreQuiz" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal" placeholder="Quiz Football du jour">
+                            <form id="formQuizStd" class="space-y-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Titre</label>
+                                    <input type="text" id="titreQuizStd" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal" placeholder="Quiz Standard">
                                 </div>
-                                <div class="mb-4">
+                                <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-2">Description</label>
-                                    <textarea id="descQuiz" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal h-20" placeholder="Testez vos connaissances football..."></textarea>
+                                    <textarea id="descQuizStd" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal h-20" placeholder="Description du quiz..."></textarea>
                                 </div>
-                                <div class="mb-6">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2">Montant du Bonus (XOF)</label>
-                                    <input type="number" id="montantQuiz" value="500" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Montant (XOF)</label>
+                                    <input type="number" id="montantQuizStd" value="500" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal">
                                 </div>
                                 <button type="submit" class="w-full bg-bleu-principal text-white py-2 px-4 rounded-lg hover:bg-bleu-fonce transition-colors">
-                                    <i class="fas fa-plus mr-2"></i>Créer le Quiz
+                                    <i class="fas fa-plus mr-2"></i>Créer Quiz Standard
                                 </button>
                             </form>
                         </div>
@@ -151,31 +114,72 @@
 
                     <div class="bg-white rounded-lg shadow-md">
                         <div class="px-4 lg:px-6 py-4 border-b">
-                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Gestion Bonus VIP</h2>
+                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Quiz VIP</h2>
                         </div>
                         <div class="p-4 lg:p-6">
-                            <div class="mb-4">
-                                <label class="block text-sm font-medium text-gray-700 mb-2">Montant Bonus VIP Mensuel</label>
-                                <input type="number" id="bonusVip" value="1000" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal">
-                                <p class="text-sm text-gray-500 mt-1">XOF par mois</p>
-                            </div>
-                            <div class="mb-6">
-                                <label class="block text-sm font-medium text-gray-700 mb-2">Prochaine Distribution</label>
-                                <input type="date" id="dateDistrib" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu-principal">
-                            </div>
-                            <button onclick="majBonusVip()" class="w-full bg-jaune-accent text-white py-2 px-4 rounded-lg hover:bg-yellow-500 transition-colors mb-3">
-                                <i class="fas fa-save mr-2"></i>Sauvegarder
-                            </button>
-                            <button onclick="distribuerBonus()" class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition-colors">
-                                <i class="fas fa-gift mr-2"></i>Distribuer Maintenant
-                            </button>
+                            <form id="formQuizVip" class="space-y-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Titre</label>
+                                    <input type="text" id="titreQuizVip" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-jaune-accent" placeholder="Quiz VIP">
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Description</label>
+                                    <textarea id="descQuizVip" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-jaune-accent h-20" placeholder="Description du quiz VIP..."></textarea>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Montant (XOF)</label>
+                                    <input type="number" id="montantQuizVip" value="1000" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-jaune-accent">
+                                </div>
+                                <button type="submit" class="w-full bg-jaune-accent text-white py-2 px-4 rounded-lg hover:bg-yellow-500 transition-colors">
+                                    <i class="fas fa-crown mr-2"></i>Créer Quiz VIP
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-lg shadow-md">
+                        <div class="px-4 lg:px-6 py-4 border-b">
+                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Mardi Bonus</h2>
+                        </div>
+                        <div class="p-4 lg:p-6">
+                            <form id="formMardiBonus" class="space-y-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Type Client</label>
+                                    <select id="typeClient" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                                        <option value="standard">Client Standard</option>
+                                        <option value="vip">Client VIP</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Critère</label>
+                                    <select id="critere" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                                        <option value="nb_depot">Nombre de dépôt les plus élevé</option>
+                                        <option value="somme_depot">Somme total de dépôt les plus élevé</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Nombre de bénéficiaires</label>
+                                    <select id="nbBenef" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                                        <option value="5">5 premiers</option>
+                                        <option value="10">10 premiers</option>
+                                        <option value="30">30 premiers</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Montant Bonus (XOF)</label>
+                                    <input type="number" id="montantMardiBonus" value="2000" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                                </div>
+                                <button type="submit" class="w-full bg-green-600 text-white py-2 px-4 rounded-lg hover:bg-green-700 transition-colors">
+                                    <i class="fas fa-filter mr-2"></i>Appliquer Filtre
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md mb-6">
                     <div class="px-4 lg:px-6 py-4 border-b">
-                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Quiz Actifs</h2>
+                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Quiz Standard Actifs</h2>
                     </div>
                     <div class="hidden md:block overflow-x-auto">
                         <table class="w-full">
@@ -188,17 +192,45 @@
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
                                 </tr>
                             </thead>
-                            <tbody id="tableQuiz" class="divide-y divide-gray-200">
+                            <tbody id="tableQuizStd" class="divide-y divide-gray-200">
                             </tbody>
                         </table>
                     </div>
-                    <div class="md:hidden" id="quizMobile">
+                    <div class="md:hidden" id="quizStdMobile">
                     </div>
                 </div>
 
-                <div class="bg-white rounded-lg shadow-md">
+                <div class="bg-white rounded-lg shadow-md mb-6">
                     <div class="px-4 lg:px-6 py-4 border-b">
-                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Membres VIP</h2>
+                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Quiz VIP Actifs</h2>
+                    </div>
+                    <div class="hidden md:block overflow-x-auto">
+                        <table class="w-full">
+                            <thead class="bg-gray-50">
+                                <tr>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Titre</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Participants</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Bonus</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Statut</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tableQuizVip" class="divide-y divide-gray-200">
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="md:hidden" id="quizVipMobile">
+                    </div>
+                </div>
+
+                <div id="beneficiairesSection" class="bg-white rounded-lg shadow-md hidden">
+                    <div class="px-4 lg:px-6 py-4 border-b">
+                        <div class="flex justify-between items-center">
+                            <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Bénéficiaires Mardi Bonus</h2>
+                            <button id="btnAttribuerBonus" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors">
+                                <i class="fas fa-gift mr-2"></i>Attribuer Bonus
+                            </button>
+                        </div>
                     </div>
                     <div class="hidden md:block overflow-x-auto">
                         <table class="w-full">
@@ -206,16 +238,16 @@
                                 <tr>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Nom</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Email</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Statut VIP</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Dernier Bonus</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Téléphone</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Type</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Valeur</th>
                                 </tr>
                             </thead>
-                            <tbody id="tableVip" class="divide-y divide-gray-200">
+                            <tbody id="tableBeneficiaires" class="divide-y divide-gray-200">
                             </tbody>
                         </table>
                     </div>
-                    <div class="md:hidden" id="vipMobile">
+                    <div class="md:hidden" id="beneficiairesMobile">
                     </div>
                 </div>
             </main>
