--- a/admin/adminHistorique.html
+++ b/admin/adminHistorique.html
@@ -13,7 +13,7 @@
         <aside id="menu" class="bg-white shadow-lg w-64 fixed h-full z-30 transform -translate-x-full lg:translate-x-0 transition-transform duration-300">
             <div class="p-6 bg-bleu flex justify-between items-center">
                 <h2 class="text-white text-xl font-bold">Admin Panel</h2>
-                <button id="fermer" class="lg:hidden text-white hover:text-gray-200">
+                <button id="btnFermer" class="lg:hidden text-white hover:text-gray-200">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
@@ -39,7 +39,7 @@
                     <i class="fas fa-video mr-3"></i>
                     Nouvelle Vidéo
                 </a>
-                <a href="adminHistorique.html" class="flex items-center px-6 py-3 text-bleu bg-blue-50 border-r-3 border-bleu">
+                <a href="a#" class="flex items-center px-6 py-3 text-bleu bg-blue-50 border-r-3 border-bleu">
                     <i class="fas fa-history mr-3"></i>
                     Mes Historiques
                 </a>
@@ -55,7 +55,11 @@
                     <i class="fas fa-gift mr-3"></i>
                     Bonus
                 </a>
-                <button id="deco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
+                <a href="adminVip.html" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 transition-colors">
+                    <i class="fas fa-crown mr-3"></i>
+                    Utilisateurs VIP
+                </a>
+                <button id="btnDeco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Déconnexion
                 </button>
@@ -66,7 +70,7 @@
             <header class="bg-white shadow-sm border-b">
                 <div class="flex items-center justify-between px-4 lg:px-6 py-4">
                     <div class="flex items-center">
-                        <button id="ouvrir" class="lg:hidden text-gray-600 mr-4">
+                        <button id="btnOuvrir" class="lg:hidden text-gray-600 mr-4">
                             <i class="fas fa-bars text-xl"></i>
                         </button>
                         <h1 class="text-xl lg:text-2xl font-semibold text-gray-800">Mes Historiques</h1>
@@ -87,7 +91,7 @@
                         <div class="flex items-center justify-between">
                             <div>
                                 <p class="text-gray-500 text-sm">Total Transactions</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-bleu" id="total">245</p>
+                                <p class="text-2xl lg:text-3xl font-bold text-bleu" id="ttlTrans">245</p>
                             </div>
                             <div class="bg-blue-100 p-3 rounded-full">
                                 <i class="fas fa-list text-bleu text-lg lg:text-xl"></i>
@@ -99,7 +103,7 @@
                         <div class="flex items-center justify-between">
                             <div>
                                 <p class="text-gray-500 text-sm">Validées</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-green-600" id="valide">198</p>
+                                <p class="text-2xl lg:text-3xl font-bold text-green-600" id="nbValide">198</p>
                             </div>
                             <div class="bg-green-100 p-3 rounded-full">
                                 <i class="fas fa-check-circle text-green-600 text-lg lg:text-xl"></i>
@@ -111,7 +115,7 @@
                         <div class="flex items-center justify-between">
                             <div>
                                 <p class="text-gray-500 text-sm">Rejetées</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-red-600" id="rejete">47</p>
+                                <p class="text-2xl lg:text-3xl font-bold text-red-600" id="nbRejete">47</p>
                             </div>
                             <div class="bg-red-100 p-3 rounded-full">
                                 <i class="fas fa-times-circle text-red-600 text-lg lg:text-xl"></i>
@@ -124,13 +128,13 @@
                     <div class="px-4 lg:px-6 py-4 border-b flex flex-col lg:flex-row lg:items-center lg:justify-between space-y-4 lg:space-y-0">
                         <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Historique des Transactions</h2>
                         <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-2">
-                            <select id="filtre" class="px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu text-sm">
-                                <option value="tout">Tous les statuts</option>
+                            <select id="filtreStatut" class="px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu text-sm">
+                                <option value="tous">Tous les statuts</option>
                                 <option value="valide">Validées</option>
                                 <option value="rejete">Rejetées</option>
                             </select>
-                            <select id="type" class="px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu text-sm">
-                                <option value="tout">Tous les types</option>
+                            <select id="filtreType" class="px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-bleu text-sm">
+                                <option value="tous">Tous les types</option>
                                 <option value="retrait">Retraits</option>
                                 <option value="depot">Dépôts</option>
                             </select>
@@ -142,14 +146,18 @@
                             <thead class="bg-gray-50">
                                 <tr>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">ID</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Utilisateur</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Nom</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Numéro</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Montant</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Plateforme</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Paiement</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Code Retrait</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Type</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Statut</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Date</th>
                                 </tr>
                             </thead>
-                            <tbody id="tabHisto" class="divide-y divide-gray-200">
+                            <tbody id="tableHisto" class="divide-y divide-gray-200">
                             </tbody>
                         </table>
                     </div>
@@ -159,13 +167,13 @@
 
                     <div class="px-4 lg:px-6 py-4 border-t flex items-center justify-between">
                         <div class="text-sm text-gray-500">
-                            Affichage de <span id="debut">1</span> à <span id="fin">10</span> sur <span id="totalAff">0</span> transactions
+                            Affichage de <span id="numDebut">1</span> à <span id="numFin">10</span> sur <span id="ttlAff">0</span> transactions
                         </div>
                         <div class="flex space-x-2">
-                            <button id="prec" class="px-3 py-1 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 transition-colors text-sm">
+                            <button id="btnPrec" class="px-3 py-1 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 transition-colors text-sm">
                                 Précédent
                             </button>
-                            <button id="suiv" class="px-3 py-1 bg-bleu text-white rounded hover:bg-bleu-fonce transition-colors text-sm">
+                            <button id="btnSuiv" class="px-3 py-1 bg-bleu text-white rounded hover:bg-bleu-fonce transition-colors text-sm">
                                 Suivant
                             </button>
                         </div>
