--- a/admin/adminTransaction.html
+++ b/admin/adminTransaction.html
@@ -13,7 +13,7 @@
         <aside id="menu" class="bg-white shadow-lg w-64 fixed h-full z-30 transform -translate-x-full lg:translate-x-0 transition-transform duration-300">
             <div class="p-6 bg-bleu flex justify-between items-center">
                 <h2 class="text-white text-xl font-bold">Admin Panel</h2>
-                <button id="fermer" class="lg:hidden text-white hover:text-gray-200">
+                <button id="btnFermer" class="lg:hidden text-white hover:text-gray-200">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
@@ -47,7 +47,7 @@
                     <i class="fas fa-users mr-3"></i>
                     Utilisateurs
                 </a>
-                <a href="adminTransaction.html" class="flex items-center px-6 py-3 text-bleu bg-blue-50 border-r-3 border-bleu">
+                <a href="#" class="flex items-center px-6 py-3 text-bleu bg-blue-50 border-r-3 border-bleu">
                     <i class="fas fa-credit-card mr-3"></i>
                     Transactions
                 </a>
@@ -55,7 +55,11 @@
                     <i class="fas fa-gift mr-3"></i>
                     Bonus
                 </a>
-                <button id="deco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
+                <a href="adminVip.html" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-100 transition-colors">
+                    <i class="fas fa-crown mr-3"></i>
+                    Utilisateurs VIP
+                </a>
+                <button id="btnDeco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Déconnexion
                 </button>
@@ -66,7 +70,7 @@
             <header class="bg-white shadow-sm border-b">
                 <div class="flex items-center justify-between px-4 lg:px-6 py-4">
                     <div class="flex items-center">
-                        <button id="ouvrir" class="lg:hidden text-gray-600 mr-4">
+                        <button id="btnOuvrir" class="lg:hidden text-gray-600 mr-4">
                             <i class="fas fa-bars text-xl"></i>
                         </button>
                         <h1 class="text-xl lg:text-2xl font-semibold text-gray-800">Gestion des Transactions</h1>
@@ -84,55 +88,78 @@
             <main class="p-4 lg:p-6">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 lg:gap-6 mb-6 lg:mb-8">
                     <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between">
-                            <div>
-                                <p class="text-gray-500 text-sm">Total en Attente</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-jaune" id="totalAttente">0</p>
-                            </div>
-                            <div class="bg-yellow-100 p-3 rounded-full">
-                                <i class="fas fa-clock text-jaune text-lg lg:text-xl"></i>
-                            </div>
+                        <div class="text-center">
+                            <p class="text-gray-500 text-sm">Nombre dépôt</p>
+                            <p class="text-2xl font-bold text-green-600" id="nbDep">0</p>
                         </div>
                     </div>
 
                     <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between">
-                            <div>
-                                <p class="text-gray-500 text-sm">Dépôts</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-green-600" id="nbDepots">0</p>
-                            </div>
-                            <div class="bg-green-100 p-3 rounded-full">
-                                <i class="fas fa-arrow-down text-green-600 text-lg lg:text-xl"></i>
-                            </div>
+                        <div class="text-center">
+                            <p class="text-gray-500 text-sm">Nombre retrait</p>
+                            <p class="text-2xl font-bold text-blue-600" id="nbRet">0</p>
                         </div>
                     </div>
 
                     <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="flex items-center justify-between">
-                            <div>
-                                <p class="text-gray-500 text-sm">Retraits</p>
-                                <p class="text-2xl lg:text-3xl font-bold text-red-600" id="nbRetraits">0</p>
-                            </div>
-                            <div class="bg-red-100 p-3 rounded-full">
-                                <i class="fas fa-arrow-up text-red-600 text-lg lg:text-xl"></i>
-                            </div>
+                        <div class="text-center">
+                            <p class="text-gray-500 text-sm">Nombre rejeté</p>
+                            <p class="text-2xl font-bold text-red-600" id="nbRej">0</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md mb-6">
+                    <div class="px-4 lg:px-6 py-4 border-b">
+                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">
+                            <i class="fas fa-clock text-yellow-500 mr-2"></i>
+                            Transactions en attente
+                        </h2>
+                    </div>
+
+                    <div class="hidden md:block overflow-x-auto">
+                        <table class="w-full">
+                            <thead class="bg-gray-50">
+                                <tr>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">ID</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Utilisateur</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Montant</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Type</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Plateforme</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Méthode</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Numéro</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">ID du compte</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Date</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tabAttente" class="divide-y divide-gray-200">
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="md:hidden" id="attenteMobile">
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
                     <div class="px-4 lg:px-6 py-4 border-b flex flex-col md:flex-row md:items-center md:justify-between gap-4">
-                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">Demandes en Attente</h2>
+                        <h2 class="text-lg lg:text-xl font-semibold text-gray-800">
+                            <i class="fas fa-history text-gray-500 mr-2"></i>
+                            Historique des transactions
+                        </h2>
                         <div class="flex flex-col sm:flex-row gap-2">
-                            <select id="filtreType" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
+                            <select id="filtPer" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
+                                <option value="tous">Tous</option>
+                                <option value="auj">Aujourd'hui</option>
+                                <option value="hier">Hier</option>
+                                <option value="moisAct">Mois actuel</option>
+                                <option value="moisDer">Mois dernier</option>
+                            </select>
+                            <select id="filtTyp" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
                                 <option value="">Tous les types</option>
                                 <option value="depot">Dépôts</option>
                                 <option value="retrait">Retraits</option>
-                            </select>
-                            <select id="filtreStatut" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
-                                <option value="attente">En attente</option>
-                                <option value="valide">Validées</option>
-                                <option value="rejete">Rejetées</option>
                             </select>
                         </div>
                     </div>
@@ -141,21 +168,25 @@
                         <table class="w-full">
                             <thead class="bg-gray-50">
                                 <tr>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Utilisateur</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Montant</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Type</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Méthode</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Date</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Statut</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">ID</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Utilisateur</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Montant</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Type</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Plateforme</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Méthode</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Numéro</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">ID du compte</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Date</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Statut</th>
+                                    <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
                                 </tr>
                             </thead>
-                            <tbody id="tabTrans" class="divide-y divide-gray-200">
+                            <tbody id="tabHist" class="divide-y divide-gray-200">
                             </tbody>
                         </table>
                     </div>
 
-                    <div class="md:hidden" id="transMobile">
+                    <div class="md:hidden" id="histMobile">
                     </div>
                 </div>
             </main>
@@ -164,21 +195,21 @@
 
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden lg:hidden"></div>
 
-    <div id="modalDetails" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
+    <div id="modalDet" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-lg max-w-md w-full p-6">
             <div class="flex justify-between items-center mb-4">
                 <h3 class="text-lg font-semibold">Détails de la Transaction</h3>
-                <button id="fermerModal" class="text-gray-400 hover:text-gray-600">
+                <button id="btnFermerModal" class="text-gray-400 hover:text-gray-600">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <div id="contenuModal" class="space-y-3">
+            <div id="contModal" class="space-y-3">
             </div>
             <div class="flex justify-end space-x-3 mt-6">
-                <button id="btnRejeter" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition-colors">
+                <button id="btnRej" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition-colors">
                     <i class="fas fa-times mr-2"></i>Rejeter
                 </button>
-                <button id="btnValider" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors">
+                <button id="btnVal" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-colors">
                     <i class="fas fa-check mr-2"></i>Valider
                 </button>
             </div>
